--- a/css/layout.css
+++ b/css/layout.css
@@ -36,7 +36,7 @@
     clear: both;
     height: 10em;
 }
-.layout{
+.frame-layout{
     padding: 0.5em 1em;
     margin: 2em 0;
     font-weight: bold;
