--- a/css/layout.css
+++ b/css/layout.css
@@ -13,8 +13,7 @@ header {
 }
 
 #picture{
-    height: 40vh;
-    
+    height: 40vh;   
 }
 
 #container{
@@ -23,23 +22,23 @@ header {
 
 #left_container{
     float: left;
-    width: 43%;
+    width: 45%;
     height: 30vh;
 }
 
 #right_container{
     float: right;
-    width: 43%;
+    width: 45%;
     height: 30vh;
 }
 
-#footer{
+footer{
     clear: both;
     height: 10vh;
 }
+
 .frame_layout{
-    padding: 0.5vw 1vw;
-    margin: 2vw 0;
+    margin: 2vh 0;
     font-weight: bold;
     border: solid 3px #000000;
 }
