--- a/css/layout.css
+++ b/css/layout.css
@@ -5,12 +5,11 @@
 #site_box {
     width: 70vw;
     margin: auto;
-    margin-bottom : 2vh;
+    margin-bottom : 2vh 0;
 }
 
 header {
     height: 10vh;
-    margin-top: 2vh;
 }
 
 #picture{
