--- a/css/layout.css
+++ b/css/layout.css
@@ -9,10 +9,9 @@
 header{
     position: fixed;
     width: 100vw;
-    height: 10vh;
-    background: rgb(189, 189, 189);
-    opacity: 0.8;
+    height: 10%;
 }
+
 #image_box{
     padding-top: 10vh;
     width: 100%;
