--- a/css/header.css
+++ b/css/header.css
@@ -38,7 +38,7 @@ nav{
 
 .side_bar span{
     display: block;
-    margin: 3px 0 0 0;
+    margin: 0.3em 0 0 0;
     text-align: center;
     letter-spacing: 1px;
     color: #1a1a1a;
