--- a/css/header.css
+++ b/css/header.css
@@ -50,3 +50,12 @@ nav{
     background: #c4c4c4;
     transition: all .8s;
 }
+
+.bx-wrapper {
+    margin: 0 !important;
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: none !important;
+    background: none !important;
+  }
