--- a/css/slider.css
+++ b/css/slider.css
@@ -4,7 +4,7 @@
 
 .img_size{
     width: 100%;
-    height: 90vh;
+    height: 100%;
 }
 
 /* スライドの枠の削除 */
@@ -16,13 +16,4 @@
     border: none !important;
     background: none !important;
   }
-
-.slider div{
-    position: relative;
-}
-
-span.text{
-    font-size: 5em;
-    position: absolute;
-    text-align: center;
-}
+  
