--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,5 @@
 @import "./reset.css";
 @import "./layout.css";
 @import "./header.css";
-@import "./flexslider.css";
 @import "./slider.css";
+@import "./meanmenu.css";
