--- a/css/layout.css
+++ b/css/layout.css
@@ -10,7 +10,8 @@ header{
     position: fixed;
     width: 100vw;
     height: 10%;
-    z-index: 1;     /* メニューバーを手前に持ってきてます */
+    /* メニューバーを手前に持ってきてます */
+    z-index: 1;
 }
 
 #image_box{
