--- a/css/slider.css
+++ b/css/slider.css
@@ -1,5 +1,5 @@
 /**
- *  slider style
+ *  bxslider custom style
  */
 
 .img_size{
@@ -16,4 +16,3 @@
     border: none !important;
     background: none !important;
   }
-  
