--- a/css/header.css
+++ b/css/header.css
@@ -38,9 +38,9 @@ nav{
 
 .side_bar span{
     display: block;
-    margin: 0.3em 0 0 0;
+    margin-top: 0.8rem;
     text-align: center;
-    letter-spacing: 1px;
+    letter-spacing: 0.1rem;
     color: #1a1a1a;
 }
 
