--- a/css/header.css
+++ b/css/header.css
@@ -3,24 +3,26 @@
  */
 
 .top_logo{
-    width: 20vw;
+    width: 20%;
     height: 100%;
-    text-align: left;
+    float: left;
+
  }
+.top_logo img{
+    height: 100%;
+    width: auto;
+}
 
 .top_bar{
-    display: inline-block;
-    vertical-align: middle;
+    display: table;
+    width: 80%;
+    height: 100%;
+    float: left;
 }
 
 nav{
-    width: auto;
-    height: 100%;
-    text-align: right;
-}
-
-.h_box{
-    background: #922121;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .top_bar nav ul li{
@@ -41,6 +43,6 @@ nav{
 /* transition …… transition効果（時間的変化）をまとめて指定する */
 .top_bar li:hover{
     color: #383838;
-    background: #c4c4c4;
+    background: #645858;
     transition: all .8s;
 }
