--- a/css/layout.css
+++ b/css/layout.css
@@ -9,7 +9,8 @@
 header{
     position: fixed;
     width: 100vw;
-    height: 10%;
+    height: 10vh;
+    background-color: #c9c9c9
 }
 
 #image_box{
