--- a/css/layout.css
+++ b/css/layout.css
@@ -7,10 +7,11 @@
 }
 
 header{
- /*   position: fixed;   */
+    position: fixed;
     width: 100vw;
     height: 10vh;
     background-color: #E6E6E6;
+    z-index: 999;
 }
 
 .image_slider{
