--- a/css/meanmenu.css
+++ b/css/meanmenu.css
@@ -53,7 +53,7 @@ a.meanmenu-reveal {
 .mean-container .mean-nav {
 	float: left;
 	width: 100%;
-	background: #0c1923;
+	background: #E6E6E6;
 	margin-top: 44px;
 }
 
