--- a/css/meanmenu.css
+++ b/css/meanmenu.css
@@ -116,7 +116,7 @@ a.meanmenu-reveal {
 }
 
 .mean-container .mean-nav ul li a:hover {
-	background: #252525;
+	background: #d87e7e;
 	background: rgba(255,255,255,0.1);
 }
 
@@ -138,7 +138,7 @@ a.meanmenu-reveal {
 }
 
 .mean-container .mean-nav ul li a.mean-expand:hover {
-	background: rgba(0,0,0,0.9);
+	background: rgba(247, 170, 170, 0.9);
 }
 
 .mean-container .mean-push {
