--- a/css/nav.css
+++ b/css/nav.css
@@ -16,7 +16,7 @@ nav{
 
 .nav_menu ul li{
     font-size: 1rem;
-    padding: 1vh 5vw;
+    padding: .7vh 5vw;
     float: left;
     border-right: 1px solid #383838;
 }
@@ -33,10 +33,4 @@ nav{
     color: #383838;
     background: #c4c4c4;
     transition: all .8s;
-}
-
-.nav_layout{
-    width: auto;
-    height: 100%;
-    margin-top: 1vh;
 }
