--- a/css/nav.css
+++ b/css/nav.css
@@ -5,7 +5,12 @@
 .nav_menu{
     display: table;
     height: 100%;
-    margin-top: 1vh;
+}
+
+.nav_wrap{
+    height: 100%;
+    width: 80%;
+    float: left;
 }
 
 nav{
