--- a/css/slider.css
+++ b/css/slider.css
@@ -1,35 +1,23 @@
 /**
- *  bxslider custom style
+ *  image slider style
  */
 
-.img_size{
+ .layout_img{
+    position: relative;
+    z-index: -1;
     width: 100%;
     height: 100%;
 }
 
-/* スライドの枠の削除 */
-.bx-wrapper{
-    margin: 0 !important;
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    border: none !important;
-    background: none !important;
-  }
- 
-img{
-    position: relative;
-    z-index: -5;
-}
   /* top_image テキストのframe */
 .image_layout_text{
-    color: rgb(255, 255, 255);
-    background-color: rgba(58, 58, 58, 0.7);
+    color: rgba(255, 255, 255);
+    background-color: rgba(66, 66, 66, 0.842);
     padding: 2% 3%;
     text-align: left;
 }
 
-/* ３枚目 */
+/* absolute top_img1.2.3.4に適応してます*/
 .absolute{
     position: absolute;
     bottom: 7%;
@@ -73,10 +61,38 @@ img{
 }
 
 /* 4枚目 */
-table,tr,td{
-   border: .2vw #808080 solid;;
-   padding: 1% .5%;
+.design_table,tr,td{
+   border: .2rem rgb(214, 214, 214) solid;;
+   padding: 3% .5%;
    font-size: 2.5vw;
    width: 50vw;
    text-align: center;
+   vertical-align: middle;
 }
+
+.design_table td a{
+    background-color: rgba(94, 245, 114, 0.527);
+    padding: 0 20%;
+    color: rgb(255, 255, 255);
+    text-decoration:none;
+    /* 角の丸み */
+    border-radius: 15vw;
+    /* Safari,Google Chrome用 */  
+    -webkit-border-radius: 15vw;      
+    /* Firefox用 */
+    -moz-border-radius: 15vw;
+}
+
+/*****************************************
+             bxslider customize style
+ *****************************************/
+
+/* スライドの枠の削除 */
+.bx-wrapper{
+    margin: 0 !important;
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: none !important;
+    background: none !important;
+  }
