--- a/css/nav.css
+++ b/css/nav.css
@@ -1,49 +1,26 @@
 /**
- * nav css files
+ * import css files
  */
 
-.nav_menu{
-    display: table;
-    height: 100%;
+ .inner{
+     width: 100vw;
+     margin: 0 auto;
+ }
+
+ /* header */
+ #top_head{
+     top: -100px;
+     position: absolute;
+     width: 100%;
+     margin: 100px auto 0;
+     padding: 30px 0 0;
+     line-height: 1;
+     z-index: 999;
+ }
+
+#top_head a{
+    color: rgb(37, 5, 5);
+    text-decoration: none;
 }
 
-.nav_wrap{
-    width: 75%;
-    height: 100%;
-    float: left;
-}
-
-nav{
-    width: auto;
-    display: table-cell;
-    /* navigationをセンター寄せ */
-    vertical-align: middle;
-}
-
-.nav_menu ul li{
-    padding: 0.8vh 2vw;
-    float: left;
-    border-right: .01rem solid #383838;
-}
-
-.nav_menu span{
-    display: block; 
-    text-align: center;
-    padding: .2vh;
-    letter-spacing: .1rem;
-    color: #1a1a1a;
-}
-
-/* カーソルが乗っている時のスタイル */
-.nav_menu li:hover{
-    color: #383838;
-    background: #c4c4c4;
-    transition: all .8s;
-}
-
-@media screen and (max-width:800px) { 
-    /*　画面サイズが480pxからはここを読み込む　*/
-    .mean-container .mean-bar{
-    padding-top: 10vh;
-}
-}
+#
