--- a/css/common.css
+++ b/css/common.css
@@ -10,3 +10,14 @@ img{
     width: 100%;
     height: 100%;
 }
+
+/*****************************************
+        vendor prefix style
+*****************************************/
+
+.fit_width{
+    width: -moz-fit-content !important;
+    width: -webkit-fit-content !important;
+    width: -o-fit-content !important;
+    width: -ms-fit-content !important;
+}
