--- a/css/layout.css
+++ b/css/layout.css
@@ -2,8 +2,18 @@
  *  layout style
  */
 
-#site_box {
-    margin : 2vh 0;
+#site_box{
+    margin: 0 10vw;
+}
+
+header{
+    top: -100px;
+    position: absolute;
+    width: 100%;
+    margin: 100px auto 0;
+    padding: 30px 0 0;
+    line-height: 1;
+    z-index: 999;
 }
 
 .image_slider{
