--- a/css/nav.css
+++ b/css/nav.css
@@ -5,22 +5,21 @@
  .inner{
      width: 100vw;
      margin: 0 auto;
+     position: relative;
  }
 
+ /*.inner:after{
+     clear:both;
+     display: block
+ } */
+ 
  /* header */
- #top_head{
-     top: -100px;
-     position: absolute;
-     width: 100%;
-     margin: 100px auto 0;
-     padding: 30px 0 0;
-     line-height: 1;
-     z-index: 999;
- }
-
-#top_head a{
-    color: rgb(37, 5, 5);
+header a{
+    color: rgba(104, 0, 0, 0.993);
     text-decoration: none;
 }
 
-#
+.logo{
+    float: left;
+    font-size: 2vw;
+}
