--- a/css/header.css
+++ b/css/header.css
@@ -15,3 +15,18 @@ header a{
     color:#be16cae3;
     text-decoration: none;
 }
+
+header.fixed{
+    margin-top: 0;
+    top: 0;
+    position: fixed;
+    padding-top: 3vh;
+    height: 5.5vh;
+    background: rgba(212, 50, 50, 0.9);
+    transition: top 0.65s ease-in;
+    -webkit-transition: top 0.65s ease-in;
+    -moz-transition: top 0.65s ease-in;
+    -o-transition: top 0.65s ease-in;
+
+}
+
