--- a/css/header.css
+++ b/css/header.css
@@ -10,23 +10,28 @@ header{
     line-height: 1;
     z-index: 999;
 }
-
-header a{
-    color:#be16cae3;
+header a,
+header {
+    color: rgb(209, 19, 19);
     text-decoration: none;
 }
-
-header.fixed{
-    margin-top: 0;
-    top: 0;
-    position: fixed;
-    padding-top: 3vh;
-    height: 5.5vh;
-    background: rgba(212, 50, 50, 0.9);
-    transition: top 0.65s ease-in;
-    -webkit-transition: top 0.65s ease-in;
-    -moz-transition: top 0.65s ease-in;
-    -o-transition: top 0.65s ease-in;
-
+header .inner {
+    position: relative;
 }
-
+header .logo {
+    float: left;
+    font-size: 36px;
+}
+nav ul {
+    list-style: none;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    font-size: 14px;
+}
+nav ul li {
+    float: left;
+}
+nav ul li a {
+    padding: 0 30px;
+}
