--- a/css/nav.css
+++ b/css/nav.css
@@ -6,10 +6,10 @@
      width: 100vw;
      margin: 0 auto;
      position: relative;
+     display: table-cell;
  }
 /* menu bar の　配置　*/
 nav ul{
-    position: absolute;
     right: 0;
     bottom: 0;
     font-size: 1vw;
@@ -17,6 +17,7 @@ nav ul{
 
 nav ul li {
     float: left;
+    vertical-align: middle;
 }
 
 nav ul li a {
