style(nav.css,layout.css,logo.css)追加・変更をしました。

--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,11 @@
     margin: 0 10vw;
 }
 
+header{
+    position:fixed;
+    width: 100%;
+}
+
 .image_slider{
     padding-top: 10vh;
     width: 100%;
