--- a/css/nav.css
+++ b/css/nav.css
@@ -4,22 +4,25 @@
 
 .inner{
     position: relative;
-    width: auto;
-    height: 11vh;
+    height: 10vh;
+    width: 100vw;
     background-color: rgba(243, 243, 241, .3);
 
 }
 
-.global_nav ul {
+.layout_nav{
+    width: 80%;
+}
+
+.global_nav  {
     position: absolute;
-    right: 5vw;
     bottom: 0;
+    right: 0;
 }
 
 .global_nav ul li{
-    float: left;
-    margin: 1vh 0;
     border-left: solid .1vh rgba(199, 36, 36, 1);
+    float: left;
  }
 
  .global_nav ul li :hover{
@@ -29,14 +32,12 @@
  
 .global_nav ul li a{
     font-size: 1vw;
-    padding: 0 5vw;
+    padding: 0 4vw;
     color: #5e5e5eef;
     text-decoration: none;
 }
 
-
 /* transition */
-header,
 .inner,
 .logo,
 .global_nav ul li,
@@ -47,6 +48,7 @@ header,
 /* Fixed */
 
 .fixed .inner{
+    width: 100%;
     padding-top: 15px;
     background-color: rgba(197, 197, 197, .6);
 }
