--- a/css/nav.css
+++ b/css/nav.css
@@ -1,23 +1,13 @@
 /**
  *  nav style
  */
-
-.inner{
-    position: relative;
-    height: 10vh;
-    width: 100vw;
-    background-color: rgba(243, 243, 241, .3);
-
-}
-
 .layout_nav{
     width: 80%;
+    float: right;
 }
 
 .global_nav  {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    float: right;
 }
 
 .global_nav ul li{
@@ -31,7 +21,7 @@
  }
  
 .global_nav ul li a{
-    font-size: 1vw;
+    font-size: 1.2vw;
     padding: 0 4vw;
     color: #5e5e5eef;
     text-decoration: none;
@@ -49,11 +39,11 @@
 
 .fixed .inner{
     width: 100%;
-    padding-top: 15px;
-    background-color: rgba(197, 197, 197, .6);
+    padding-top: 5vh;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .fixed .global_nav ul li a{
-    padding: 0 20px;
+    padding: 0 2vw;
     right: 0;
 }
