--- a/css/nav.css
+++ b/css/nav.css
@@ -18,12 +18,10 @@
 
  .global_nav ul li :hover{
      background-color: rgba(224, 224, 224, .7);
-     margin: 0 .5vw;
  }
  
 .global_nav ul li a{
     font-size: 1.2vw;
-    padding: 0 4vw;
     color: #5e5e5eef;
     text-decoration: none;
 }
@@ -38,7 +36,7 @@
 
 /* Fixed */
 
-.fixed .inner{
+.fixed{
     width: 100%;
     padding-top: 5vh;
     background-color: rgba(0, 0, 0, 0.6);
