--- a/css/nav.css
+++ b/css/nav.css
@@ -30,7 +30,7 @@
 .global_nav ul li a{
     font-size: 1vw;
     color: #5e5e5eef;
-    padding: 0 2vw;
+    padding: .1vh 2vw;
     text-decoration: none;
 }
 
@@ -62,5 +62,5 @@ header,
     right: 0;
 }
 .fixed .global_nav ul li a{
-    padding: 0 1vw;
+    padding: .1vh 1vw;
 }
