--- a/css/slider.css
+++ b/css/slider.css
@@ -33,7 +33,9 @@
 }
 
 .tips_solicit p{
-    font-size: 2.2vw;
+    font-size: 2vw;
+    max-width: 70vw;
+    max-height: 30vh;
     padding: .8%;
 }
 
