--- a/css/slider.css
+++ b/css/slider.css
@@ -32,7 +32,7 @@
     line-height: 1.5;
 }
 
-.tips_solicit{
+.tips_solicit .tips{
     max-width: 70vw;
     max-height: 30vh;
 }
@@ -70,8 +70,8 @@
 
 .tips_table,.tips_table tr,.tips_table td{
     border: .1em rgba(214, 214, 214 ,1) solid;
-    font-size: 2.5vw;
-    padding: 2%;
+    font-size: 2vw;
+    padding: 3% 0;
     text-align: center;
     vertical-align: middle;
  }
@@ -80,7 +80,7 @@
     background-color: rgba(94, 245, 114, .5);
     color: rgba(255, 255, 255, 1);
     text-decoration:none;
-    padding: 0 10%;
+    padding: 0 15%;
     /* 角の丸み */
     border-radius: 15vw;  
     -webkit-border-radius: 15vw;      
