--- a/css/slider.css
+++ b/css/slider.css
@@ -33,8 +33,8 @@
 }
 
 .tips_solicit .tips{
-    max-width: 70vw;
-    max-height: 30vh;
+    max-width: 70%;
+    max-height: 50%;
 }
 
 .tips_solicit p{
@@ -60,23 +60,18 @@
     color: rgba(255, 255, 255, 1);
     background-color: rgba(66, 66, 66, .8);
     padding: 2% 2%;
-    text-align: center;
-    width: 60vw;
+    width: 100%;
 }
 
-.tips_table{
-    width: 60vw;
-}
-
-.tips_table,.tips_table tr,.tips_table td{
-    border: .1em rgba(214, 214, 214 ,1) solid;
+.tips_table,.tips_table tr,.tips_table th{
+    border: .1rem rgba(214, 214, 214 ,1) solid;
     font-size: 2vw;
-    padding: 2% 5%;
-    text-align: center;
+    padding: 2% 0;
+    width: 55vw;
     vertical-align: middle;
  }
 
-.tips_table td a{
+.tips_table th a{
     background-color: rgba(94, 245, 114, .5);
     color: rgba(255, 255, 255, 1);
     text-decoration:none;
@@ -87,9 +82,6 @@
     -moz-border-radius: 15vw;
     -o-border-radius: 15vw;
     -ms-border-radius: 15vw;
-}
-.tips_table_text{
-    width: 30vw;
 }
 
 /*****************************************
