--- a/css/layout.css
+++ b/css/layout.css
@@ -10,10 +10,11 @@ header{
     width: 100vw;
     height: 10vh;
     position: fixed;
+    z-index: 1;
+
 }
 
 .image_slider{
-    padding-top: 10vh;
     width: 100%;
 }
 
