--- a/css/nav.css
+++ b/css/nav.css
@@ -3,9 +3,8 @@
  */
 .global_nav_wrap{
     width: 80%;
-    height: 100%;
+    height: 10%;
     float: right;
-    position: relative;
 }
 
 .global_nav{
@@ -30,8 +29,8 @@
  }
  
 .global_nav ul li a{
-    font-size: 1vw;
-    color: #5e5e5eef;
+    font-size: 1.2vw;
+    color: #ffffff;
     padding: .1vh 2vw;
     text-decoration: none;
 }
@@ -65,4 +64,5 @@ header,
 
 .fixed .global_nav ul li a{
     padding: .1vh .1vw;
+    color: rgb(0, 0, 0);
 }
