--- a/css/slider.css
+++ b/css/slider.css
@@ -63,7 +63,7 @@
     width: 100%;
 }
 
-.tips_table,.tips_table tr,.tips_table th{
+.tips_table,.tips_table tr,.tips_table th, .tips_table td{
     border: .1rem rgba(214, 214, 214 ,1) solid;
     font-size: 2vw;
     padding: 2% 0;
@@ -71,7 +71,7 @@
     vertical-align: middle;
  }
 
-.tips_table th a{
+.tips_table td a{
     background-color: rgba(94, 245, 114, .5);
     color: rgba(255, 255, 255, 1);
     text-decoration:none;
