--- a/css/fakeLoader.css
+++ b/css/fakeLoader.css
@@ -3,8 +3,8 @@
  *http://codepen.io/vivinantony
 ***********************/
 .spinner1 {
-  width: 40px;
-  height: 40px;
+  width: 30vw;
+  height: 30vh;
   position: relative;
 }
 
@@ -12,15 +12,13 @@
 .double-bounce1, .double-bounce2 {
   width: 100%;
   height: 100%;
-  border-radius: 50%;
-  background-color: #fff;
+  background-color: rgba(255, 20, 20, 0);
   opacity: 0.6;
   position: absolute;
-  top: 0;
-  left: 0;
-  
-  -webkit-animation: bounce 2.0s infinite ease-in-out;
-  animation: bounce 2.0s infinite ease-in-out;
+  top: 45%;
+  left: 40%;
+  background-image: url('../img/tenor.gif');
+  background-repeat:no-repeat;
 }
 
 .double-bounce2 {
